# jigsaw

./: .gitignore  Cargo.toml  Dockerfile.debian-buster-slim  Dockerfile.rust  Dockerfile.rust-slim  README.md  build.rs  example_config.jsonc  justfile  scratch
aws/: README.md  ecs_service.yaml  environment.yaml
dockerfiles/: Dockerfile.debian-buster-slim  README.md
example_configs/: README.md  call_service.jsonc  standalone.jsonc
instrumentation/: README.md  docker-compose.yaml
instrumentation/grafana/: datasources.yaml
instrumentation/grafana_agent/: agent.yaml
instrumentation/loki/: config.yaml
instrumentation/tempo/: config.yaml
proto/: jigsaw.proto
src/: config.rs  get_trace_id.rs  jigsaw_instance.rs  main.rs  thespian_instance.rs
thespian_server/: Cargo.toml
thespian_server/src/: main.rs  thespian_instance.rs
thespian_tonic_build/: Cargo.toml
thespian_tonic_build/proto/: thespian.proto
thespian_tonic_build/src/: lib.rs
