[package]
name = "jigsaw"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "jigsaw-server"
path = "src/main.rs"

[dependencies]
tokio = { version = "1.20.1", features = ["rt", "macros"] }
tonic = "0.8.0"
prost = "0.11.0"
serde =  { version = "1.0", features = ["derive"] }
serde_json = "1.0.85"
async-recursion = "1.0.0"
tracing = "0.1"
tracing-subscriber = "0.3"
futures = "0.3.24"

[build-dependencies]
tonic-build = "0.8.0"
