[package]
name = "thespian"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "thespian-server"
path = "src/main.rs"

[dependencies]
tokio = { version = "1.20.1", features = ["rt", "macros"] }
tonic = "0.8.0"
prost = "0.11.0"
serde =  { version = "1.0", features = ["derive"] }
serde_json = "1.0.85"
async-recursion = "1.0.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
futures = "0.3.24"
opentelemetry-otlp = "0.10.0"
tracing-opentelemetry = "0.17.4"
opentelemetry = "0.17.0"
tracing-loki = "0.2.1"
url = "2.2.2"
http = "0.2.8"
rand = "0.8.5"

[build-dependencies]
tonic-build = "0.8.0"
