[workspace]
members = [
    "thespian_server",
    "thespian_tonic_build",
]
# I may not need this, but I'm going to use it
default-members = ["thespian_server"]

# we don't want to define a root package since there isn't actually any root package content
# in other words, this root project is "virtual", and that means this file has to be a "virtual manifest", which is defined by the absence of the package section
# if we were to include a package section despite not having any actual root project code to comprise that package, cargo would get confused and ask for such a target to be defined/created

# according to https://doc.rust-lang.org/book/ch14-03-cargo-workspaces.html#depending-on-an-external-package-in-a-workspace, if I use the same dependency in multiple workspace package, then cargo will demand that they all be the same version (and it will only install the dependency once, as all dependencies in a workspace are actually implicitly installed at the workspace level to be inherited by all the packages)
# but it looks like I can define common dependencies with explicit versions here and then reference them in the workspace packages' Cargo.toml files as "dependencyName.workspace"
# see https://doc.rust-lang.org/cargo/reference/workspaces.html#the-dependencies-table
# TODO: try doing that